<?xml version="1.0"?>
<package format="2">
  <name>speed_zone_limiter</name>
  <version>0.0.1</version>
  <description>
    Zone-based speed limiter node that intercepts TurtleBot3 navigation
    commands and caps linear velocity inside a configured polygon on the map.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>

